# os_lab_2019

./: .gitignore
lab0/hello/: hello_world
lab1/: average.sh  ex1.sh  ex2_1.sh  ex2_2.sh  ex3_1.sh  ex4_2.sh  ex4_3.sh  numbers  sh  txt
lab2/src/revert_string/: CMakeLists.txt  Makefile  ft_strlen.c  main.c  revert_string.c  revert_string.h  revshared  revstatic
lab2/src/swap/: swap.c
lab3/src/: 2  CMakeLists.txt  Makefile  delete_buf_file.sh  find_min_max.c  find_min_max.h  fork_with_exec.c  ft_itoa.c  get_next_line.c  parallel_min_max  parallel_min_max.c  print_arr.c  sequential_min_max.c  utils.c  utils.h
lab3/text/: lab3.md
lab4/src/: CMakeLists.txt  Makefile  posix_threads  sum_array.c  zombies.c
lab4/src/libarray/: Makefile  generate_array.c  print_arr.c  sum_arr.c
lab4/text/: lab4.md
lab5/src/: CMakeLists.txt  Makefile  deadlock  deadlock.c  factorial  factorial.c  factorial.h  mutex  mutex.c
lab5/text/: lab5.md
lab6/src/: CMakeLists.txt  Makefile  client.c  server.c
lab6/src/libfactorial/: Makefile  factorial.c  factorial.h  get_next_line.c  mult_modulo.c
lab6/text/: lab6.md
lab7/src/: CMakeLists.txt  Makefile  client  tcpclient.c  tcpserver.c  udpclient.c  udpserver.c
